# AI_lab

./: .gitignore  .gitmodules  README.md
Project/: 1  2  3  4  DataFileProcess.ipynb  KNN.py  PreProcessing.ipynb  PreProcessing.py  PreProcessing_working.ipynb  README.txt  Untitled.ipynb  Untitled1.ipynb  Vectorize.ipynb
Project/.ipynb_checkpoints/: PreProcessing_working-checkpoint.ipynb  Vectorize-checkpoint.ipynb
Project/NB_release/: 16337237_0.txt  NB_release.ipynb  Vectorize.ipynb  ai_base.py
Project/report/: 实验报告.md
Project2/: MCST.py  Readme.md  config.py  dqn.py  fast_place.c  fast_place.pyx  genetic.py  hello.c  main.py  play_AlphaGo_vs_AlphaGo.py  play_AlphaGo_vs_Random.py  play_MCST_vs_Random.py  reversi.py  reversi.pyx  reversi_AlphaGo.py  reversi_Gene.py  reversi_MCST.py  setup.py  testcase.py  testcast2.py  train_AlphaGo.py
Project2/AlphaGo/: Arg.py  MCST.py  MCTS.py  Network.py  testcast2_alphago.py
Project2/MCST/: MCST.py  testcast2.py
Project2/MCTS/: MCTS.py
Project2/dqn/: dqn.py
Project2/genetic/: genetic.pyx
Project2/genetic/CVersion/: CMakeLists.txt  main.cpp  reversi.cpp  reversi.h
Project2/genetic/CppVersion/: CMakeLists.txt  main.cpp  reversi.h
Project2/ql/: ql.py
lab1/: lab1.ipynb  lab1.md
lab1/.ipynb_checkpoints/: lab1-checkpoint.ipynb
lab1/lab1_data/: getX.sh  getY.sh
lab10/: lab10.ipynb
lab11/: lab11.ipynb
lab2/: lab1.md  lab2.md
lab2/code/: CMakeLists.txt  README.md  main.cpp
lab2/report/: lab2.md
lab6/report/: 15323032_lixinrui.md
lab7/report/: 15323032_lixinrui.md
report/: 实验报告.md
(+20 files in other folders)
